--- a/src/com/abdallah/EditConsignorDialog.form
+++ b/src/com/abdallah/EditConsignorDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.abdallah.EditRecordDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.abdallah.EditConsignorDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -57,15 +57,15 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="5afe5" class="javax.swing.JLabel">
+          <component id="e768d" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Title:"/>
+              <text value="Name:"/>
             </properties>
           </component>
-          <component id="59ad2" class="javax.swing.JTextField" binding="titleTextField">
+          <component id="3d0d0" class="javax.swing.JTextField" binding="nameTextField">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -73,15 +73,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="a62c4" class="javax.swing.JLabel">
+          <component id="b665f" class="javax.swing.JLabel">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Artist:"/>
+              <text value="Phone:"/>
             </properties>
           </component>
-          <component id="507d4" class="javax.swing.JTextField" binding="artistTextField">
+          <component id="2f2fe" class="javax.swing.JTextField" binding="phoneTextField">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -89,15 +89,15 @@
             </constraints>
             <properties/>
           </component>
-          <component id="917ca" class="javax.swing.JLabel">
+          <component id="1cccd" class="javax.swing.JLabel">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Price:"/>
+              <text value="Email:"/>
             </properties>
           </component>
-          <component id="3f167" class="javax.swing.JTextField" binding="priceTextField">
+          <component id="14392" class="javax.swing.JTextField" binding="emailTextField">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
